# cmake-template

./: CMakeLists.txt  example.cpp
